--- a/mkdocs-material/material/templates/404.html
+++ b/mkdocs-material/material/templates/404.html
@@ -4,5 +4,5 @@
 {% set title_override = "<h1>404 Not Found</h1>" %}
 {% extends "main.html" %}
 {% block htmltitle %}
-  <title>404 Not Found - {{ config.site_name }}</title>
+  <!-- <title>404 Not Found - {{ config.site_name }}</title> -->
 {% endblock %}
